force-app/main/default/objects/OCE__Meeting__c/OCE__Meeting__c.object-meta.xml
<CustomObject>
    <description>The Meeting object stores information related to meetings. These vary from small to large events that may have speakers.</description>
    <label>Meeting</label>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>