force-app/main/default/objects/OCE__Meeting__c/fields/Is_Contract_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Is_Contract_Coordinator__c</fullName>
    <formula>IF($Permission.Contract_Coordinator, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Contract Coordinator</label>
    <type>Checkbox</type>
</CustomField>