force-app/main/default/objects/OCE__Meeting__c/fields/Lilly_Congress_Lead__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Congress_Lead__c</fullName>
    <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Congress Lead</label>
    <type>Text</type>
</CustomField>