force-app/main/default/objects/OCE__Meeting__c/fields/Lilly_Estimated_of_National_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Estimated_of_National_Attendees__c</fullName>
    <label>Estimated # of National Attendees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>