force-app/main/default/objects/OCE__Meeting__c/fields/Lilly_Meeting_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Meeting_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting/ Congress  Name</label>
    <referenceTo>Lilly_Scientific_Congress__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>