force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__ActualOutcomeLevelSingle__c.field-meta.xml
<CustomField>
    <fullName>OCE9__ActualOutcomeLevelSingle__c</fullName>
    <description>The level of the actual outcomes expected as results of the funded activity</description>
    <inlineHelpText>The level of the actual outcomes expected as results of the funded activity</inlineHelpText>
    <label>Moore&apos;s Actual Outcome Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__OutcomeLevels</valueSetName>
    </valueSet>
</CustomField>