force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__AnyAdverseEffects__c.field-meta.xml
<CustomField>
    <fullName>OCE9__AnyAdverseEffects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An unexpected medical problem that happens during treatment with a drug or other therapy. Adverse effects may be mild, moderate, or severe, and may be caused by something other than the drug or therapy being given</description>
    <inlineHelpText>An unexpected medical problem that happens during treatment with a drug or other therapy. Adverse effects may be mild, moderate, or severe, and may be caused by something other than the drug or therapy being given</inlineHelpText>
    <label>Any Adverse Effects?</label>
    <type>Checkbox</type>
</CustomField>