force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__BasisToConductResearch__c.field-meta.xml
<CustomField>
    <fullName>OCE9__BasisToConductResearch__c</fullName>
    <description>Explanation as to why this study needs to be conducted if similar study has already been conducted.</description>
    <inlineHelpText>Explanation as to why this study needs to be conducted if similar study has already been conducted.</inlineHelpText>
    <label>Basis To Conduct Research</label>
    <type>TextArea</type>
</CustomField>