force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__ClinicalTrialsRegistryNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE9__ClinicalTrialsRegistryNumber__c</fullName>
    <description>The ID of the study on the ClinicalTrials.gov website.</description>
    <inlineHelpText>The ID of the study on the ClinicalTrials.gov website.</inlineHelpText>
    <label>Clinical Trials Registry Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>