force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__Countries__c.field-meta.xml
<CustomField>
    <fullName>OCE9__Countries__c</fullName>
    <description>Hosting Countries for the Meeting</description>
    <inlineHelpText>Hosting Countries for the Meeting</inlineHelpText>
    <label>Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__Countries</valueSetName>
    </valueSet>
</CustomField>