force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__CrossReferenceAnotherIND__c.field-meta.xml
<CustomField>
    <fullName>OCE9__CrossReferenceAnotherIND__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the Investigator plans to cross reference another Investigational New Drug (IND) application with this one</description>
    <inlineHelpText>Whether or not the Investigator plans to cross reference another Investigational New Drug (IND) application with this one</inlineHelpText>
    <label>Cross Reference Another IND?</label>
    <type>Checkbox</type>
</CustomField>