force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__CurrentIRBECExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>OCE9__CurrentIRBECExpirationDate__c</fullName>
    <description>Date in which the approval provided by the Independent Review Board (IRB) or Ethics Committee (EC) expires</description>
    <inlineHelpText>Date in which the approval provided by the Independent Review Board (IRB) or Ethics Committee (EC) expires</inlineHelpText>
    <label>Current IRB/EC Expiration Date</label>
    <type>Date</type>
</CustomField>