force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__DataManagementPlan__c.field-meta.xml
<CustomField>
    <fullName>OCE9__DataManagementPlan__c</fullName>
    <description>A comprehensive plan of how research data will be managed throughout the lifecycle of the research project</description>
    <inlineHelpText>A comprehensive plan of how research data will be managed throughout the lifecycle of the research project</inlineHelpText>
    <label>Data Management Plan</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>