force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__EnrollingSubjects__c.field-meta.xml
<CustomField>
    <fullName>OCE9__EnrollingSubjects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will you be enrolling subjects to participate in this study?</description>
    <inlineHelpText>Will you be enrolling subjects to participate in this study?</inlineHelpText>
    <label>Enrolling Subjects</label>
    <type>Checkbox</type>
</CustomField>