force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__ExperimentalSystem__c.field-meta.xml
<CustomField>
    <fullName>OCE9__ExperimentalSystem__c</fullName>
    <description>The animal that will be used for testing the new treatment. Only displayed when Model is In-Vivo.</description>
    <inlineHelpText>The animal that will be used for testing the new treatment. Only displayed when Model is In-Vivo.</inlineHelpText>
    <label>Experimental System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mice</fullName>
            </value>
            <value>
                <fullName>Rat</fullName>
            </value>
            <value>
                <fullName>Monkey</fullName>
            </value>
            <value>
                <fullName>Pig</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>