force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__FPFVDate__c.field-meta.xml
<CustomField>
    <fullName>OCE9__FPFVDate__c</fullName>
    <description>Date of the first visit for the first patient of the study</description>
    <inlineHelpText>Date of the first visit for the first patient of the study</inlineHelpText>
    <label>FPFV Date</label>
    <type>Date</type>
</CustomField>