force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__HaveWeSupportedProgramBefore__c.field-meta.xml
<CustomField>
    <fullName>OCE9__HaveWeSupportedProgramBefore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether the funding organization has supported this type of event sponsorship program in the past or not</description>
    <inlineHelpText>Defines whether the funding organization has supported this type of event sponsorship program in the past or not</inlineHelpText>
    <label>Have we supported this program before?</label>
    <type>Checkbox</type>
</CustomField>