force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__HeldProgramBefore__c.field-meta.xml
<CustomField>
    <fullName>OCE9__HeldProgramBefore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether the requestor has conducted this event sponsorship before regardless if the funding organization supported the event sponsorship or not</description>
    <inlineHelpText>Defines whether the requestor has conducted this event sponsorship before regardless if the funding organization supported the event sponsorship or not</inlineHelpText>
    <label>Held program before?</label>
    <type>Checkbox</type>
</CustomField>