force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__InclusionCriteria__c.field-meta.xml
<CustomField>
    <fullName>OCE9__InclusionCriteria__c</fullName>
    <description>Inclusion criteria are characteristics that the prospective subjects must have if they are to be included in the study. Exclusion criteria are those characteristics that disqualify prospective subjects from inclusion in the study.</description>
    <inlineHelpText>Inclusion criteria are characteristics that the prospective subjects must have if they are to be included in the study. Exclusion criteria are those characteristics that disqualify prospective subjects from inclusion in the study.</inlineHelpText>
    <label>Inclusion / Exclusion Criteria</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>