force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__InitialIRBECApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>OCE9__InitialIRBECApprovalDate__c</fullName>
    <description>Date in which the Independent Review Board (IRB) or Ethics Committee (EC) approved the study</description>
    <inlineHelpText>Date in which the Independent Review Board (IRB) or Ethics Committee (EC) approved the study</inlineHelpText>
    <label>Initial IRB/EC Approval Date</label>
    <type>Date</type>
</CustomField>