force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__LastLegalLimitVerificationDateTime__c.field-meta.xml
<CustomField>
    <fullName>OCE9__LastLegalLimitVerificationDateTime__c</fullName>
    <description>Date when Legal limit is last verified.</description>
    <inlineHelpText>Date when Legal limit is last verified.</inlineHelpText>
    <label>Last Legal Limit Verification DateTime</label>
    <type>DateTime</type>
</CustomField>