force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__LPFVDate__c.field-meta.xml
<CustomField>
    <fullName>OCE9__LPFVDate__c</fullName>
    <description>Date of the first visit for the last patient of the study</description>
    <inlineHelpText>Date of the first visit for the last patient of the study</inlineHelpText>
    <label>LPFV Date</label>
    <type>Date</type>
</CustomField>