force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__LPLVDate__c.field-meta.xml
<CustomField>
    <fullName>OCE9__LPLVDate__c</fullName>
    <description>Date of the last visit for the last patient of the study</description>
    <inlineHelpText>Date of the last visit for the last patient of the study</inlineHelpText>
    <label>LPLV Date</label>
    <type>Date</type>
</CustomField>