force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__Model__c.field-meta.xml
<CustomField>
    <fullName>OCE9__Model__c</fullName>
    <description>The testing method by which the pre-clinical study will be conducted.Only displayed for pre-clinical studies.</description>
    <inlineHelpText>The testing method by which the pre-clinical study will be conducted.Only displayed for pre-clinical studies.</inlineHelpText>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Vitro</fullName>
            </value>
            <value>
                <fullName>Ex-Vivo</fullName>
            </value>
            <value>
                <fullName>In-Vivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>