force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__MultiSiteStudy__c.field-meta.xml
<CustomField>
    <fullName>OCE9__MultiSiteStudy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will the study be conducted across multiple locations</description>
    <inlineHelpText>Will the study be conducted across multiple locations</inlineHelpText>
    <label>Multi-Site Study?</label>
    <type>Checkbox</type>
</CustomField>