force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__NumberOfCountries__c.field-meta.xml
<CustomField>
    <fullName>OCE9__NumberOfCountries__c</fullName>
    <description>If this is a multi-site study, what is the number of countries hosting these sites</description>
    <inlineHelpText>If this is a multi-site study, what is the number of countries hosting these sites</inlineHelpText>
    <label># of Countries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>