force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__OtherINDInformation__c.field-meta.xml
<CustomField>
    <fullName>OCE9__OtherINDInformation__c</fullName>
    <description>Description of the other IND that will be cross referenced with this one</description>
    <inlineHelpText>Description of the other IND that will be cross referenced with this one</inlineHelpText>
    <label>Other IND Information</label>
    <type>TextArea</type>
</CustomField>