force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__OtherStudyPhase__c.field-meta.xml
<CustomField>
    <fullName>OCE9__OtherStudyPhase__c</fullName>
    <description>The stage in which the testing of the new treatment will be conducted.</description>
    <inlineHelpText>The stage in which the testing of the new treatment will be conducted.</inlineHelpText>
    <label>Other Study Phase</label>
    <type>TextArea</type>
</CustomField>