force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__OtherTrialDesign__c.field-meta.xml
<CustomField>
    <fullName>OCE9__OtherTrialDesign__c</fullName>
    <description>The parameters for how the study will be conducted.</description>
    <inlineHelpText>The parameters for how the study will be conducted.</inlineHelpText>
    <label>Other Trial Design</label>
    <type>TextArea</type>
</CustomField>