force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__PlannedEnrolledPatientsNum__c.field-meta.xml
<CustomField>
    <fullName>OCE9__PlannedEnrolledPatientsNum__c</fullName>
    <description>Number of patients you expect to enroll in this study</description>
    <inlineHelpText>Number of patients you expect to enroll in this study</inlineHelpText>
    <label>Planned # of Enrolled Patients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>