force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__PlannedNumberOfSubjects__c.field-meta.xml
<CustomField>
    <fullName>OCE9__PlannedNumberOfSubjects__c</fullName>
    <description>The number of subjects and site locations participating in the study</description>
    <inlineHelpText>The number of subjects and site locations participating in the study</inlineHelpText>
    <label>Planned # of Subjects / Site Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>