force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__PlannedSampleSize__c.field-meta.xml
<CustomField>
    <fullName>OCE9__PlannedSampleSize__c</fullName>
    <description>The number of observations used for determining the estimations of a given population and the ability of a study to detect statistically significant results, such as effects of a treatment.</description>
    <inlineHelpText>The number of observations used for determining the estimations of a given population and the ability of a study to detect statistically significant results, such as effects of a treatment.</inlineHelpText>
    <label>Planned Sample Size / Statistical Power</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>