force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__PlannedTimelinesMilestones__c.field-meta.xml
<CustomField>
    <fullName>OCE9__PlannedTimelinesMilestones__c</fullName>
    <description>What is the overall timeline of this study and the milestones to be achieved in this study</description>
    <inlineHelpText>What is the overall timeline of this study and the milestones to be achieved in this study</inlineHelpText>
    <label>Planned Timelines &amp; Milestones</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>