force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__PreviouslySubmittedAProtocol__c.field-meta.xml
<CustomField>
    <fullName>OCE9__PreviouslySubmittedAProtocol__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have you previously submitted a full protocol request</description>
    <inlineHelpText>Have you previously submitted a full protocol request</inlineHelpText>
    <label>Previously Submitted a Protocol?</label>
    <type>Checkbox</type>
</CustomField>