force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__PreviouslySubmittedProtocolDetails__c.field-meta.xml
<CustomField>
    <fullName>OCE9__PreviouslySubmittedProtocolDetails__c</fullName>
    <description>Provide details of the previously submitted full protocol request</description>
    <inlineHelpText>Provide details of the previously submitted full protocol request</inlineHelpText>
    <label>Previously Submitted Protocol Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>