force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__PublicationPlan__c.field-meta.xml
<CustomField>
    <fullName>OCE9__PublicationPlan__c</fullName>
    <description>Where and when will the study be published</description>
    <inlineHelpText>Where and when will the study be published</inlineHelpText>
    <label>Publication Plan</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>