force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__RegulatoryApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>OCE9__RegulatoryApprovalDate__c</fullName>
    <description>Date in which the a regulatory body has approved full use of the drug or therapy for all medical situations.</description>
    <inlineHelpText>Date in which the a regulatory body has approved full use of the drug or therapy for all medical situations.</inlineHelpText>
    <label>Regulatory Approval Date</label>
    <type>Date</type>
</CustomField>