force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__RegulatoryAuthorizationDate__c.field-meta.xml
<CustomField>
    <fullName>OCE9__RegulatoryAuthorizationDate__c</fullName>
    <description>Date in which the a regulatory body has authorized drug or therapy to be used for short-term emergency purposes only.</description>
    <inlineHelpText>Date in which the a regulatory body has authorized drug or therapy to be used for short-term emergency purposes only.</inlineHelpText>
    <label>Regulatory Authorization Date</label>
    <type>Date</type>
</CustomField>