force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__RequestManuscriptPrepSupport__c.field-meta.xml
<CustomField>
    <fullName>OCE9__RequestManuscriptPrepSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you requesting support with manuscript preparation for this study?</description>
    <inlineHelpText>Are you requesting support with manuscript preparation for this study?</inlineHelpText>
    <label>Request Manuscript Preparation Support?</label>
    <type>Checkbox</type>
</CustomField>