force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__RequestPatientEnrollAsst__c.field-meta.xml
<CustomField>
    <fullName>OCE9__RequestPatientEnrollAsst__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you requesting assistance with enrolling patients in this study?</description>
    <inlineHelpText>Are you requesting assistance with enrolling patients in this study?</inlineHelpText>
    <label>Request Patient Enrollment Assistance?</label>
    <type>Checkbox</type>
</CustomField>