force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__RequiresRegulatoryApproval__c.field-meta.xml
<CustomField>
    <fullName>OCE9__RequiresRegulatoryApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Depending on the Study Phase, regulatory approval may be required to conduct this study e.g., clinical studies on patients</description>
    <inlineHelpText>Depending on the Study Phase, regulatory approval may be required to conduct this study e.g., clinical studies on patients</inlineHelpText>
    <label>Study Requires Regulatory Approval?</label>
    <type>Checkbox</type>
</CustomField>