force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__ResearchAlreadyConducted__c.field-meta.xml
<CustomField>
    <fullName>OCE9__ResearchAlreadyConducted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not a similar study already been conducted</description>
    <inlineHelpText>Whether or not a similar study already been conducted</inlineHelpText>
    <label>Research Already Conducted?</label>
    <type>Checkbox</type>
</CustomField>