force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__RTDevName__c.field-meta.xml
<CustomField>
    <fullName>OCE9__RTDevName__c</fullName>
    <description>Developer Name of the record type</description>
    <formula>RecordType.DeveloperName</formula>
    <inlineHelpText>Developer Name of the record type</inlineHelpText>
    <label>Record Type Developer Name</label>
    <type>Text</type>
</CustomField>