force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__SafetyPlan__c.field-meta.xml
<CustomField>
    <fullName>OCE9__SafetyPlan__c</fullName>
    <description>The activities intended to protect the safety of the subjects participating in the study</description>
    <inlineHelpText>The activities intended to protect the safety of the subjects participating in the study</inlineHelpText>
    <label>Safety Plan</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>