force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__StatusUsedInBudgetCalculation__c.field-meta.xml
<CustomField>
    <fullName>OCE9__StatusUsedInBudgetCalculation__c</fullName>
    <description>This field contains the status of the meeting, which was applicable at the moment of the Budget Remaining calculation.</description>
    <inlineHelpText>This field contains the status of the meeting, which was applicable at the moment of the Budget Remaining calculation.</inlineHelpText>
    <label>Status Used In Budget Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>