force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__StudyAlreadyInProgress__c.field-meta.xml
<CustomField>
    <fullName>OCE9__StudyAlreadyInProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this study is already in progress and additional funding or product is needed support to continue</description>
    <inlineHelpText>Whether or not this study is already in progress and additional funding or product is needed support to continue</inlineHelpText>
    <label>Study Already In Progress?</label>
    <type>Checkbox</type>
</CustomField>