force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__StudyDesign__c.field-meta.xml
<CustomField>
    <fullName>OCE9__StudyDesign__c</fullName>
    <description>The strategy for answering your research question using empirical data</description>
    <inlineHelpText>The strategy for answering your research question using empirical data</inlineHelpText>
    <label>Study Design</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>