force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__StudyEndpoint__c.field-meta.xml
<CustomField>
    <fullName>OCE9__StudyEndpoint__c</fullName>
    <description>An event or outcome that can be measured objectively to determine whether the intervention being studied is beneficial</description>
    <inlineHelpText>An event or outcome that can be measured objectively to determine whether the intervention being studied is beneficial</inlineHelpText>
    <label>Study Endpoint</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>