force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__StudyInProgressInformation__c.field-meta.xml
<CustomField>
    <fullName>OCE9__StudyInProgressInformation__c</fullName>
    <description>Description of the study in progress</description>
    <inlineHelpText>Description of the study in progress</inlineHelpText>
    <label>Study In Progress Information</label>
    <type>TextArea</type>
</CustomField>