force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__StudyPhase__c.field-meta.xml
<CustomField>
    <fullName>OCE9__StudyPhase__c</fullName>
    <description>The stage in which the testing of the new treatment will be conducted</description>
    <inlineHelpText>The stage in which the testing of the new treatment will be conducted</inlineHelpText>
    <label>Study Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phase I</fullName>
            </value>
            <value>
                <fullName>Phase II</fullName>
            </value>
            <value>
                <fullName>Phase III</fullName>
            </value>
            <value>
                <fullName>Phase IV</fullName>
            </value>
            <value>
                <fullName>Observational</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>