force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__StudyPopulation__c.field-meta.xml
<CustomField>
    <fullName>OCE9__StudyPopulation__c</fullName>
    <description>Group of individuals selected on the basis of inclusion and exclusion criteria which relate to the variables being studied. It is the population from which the sample population will be randomly or purposively selected.</description>
    <inlineHelpText>Group of individuals selected on the basis of inclusion and exclusion criteria which relate to the variables being studied. It is the population from which the sample population will be randomly or purposively selected.</inlineHelpText>
    <label>Study Population / Indication</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>