force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__StudyRationaleBackground__c.field-meta.xml
<CustomField>
    <fullName>OCE9__StudyRationaleBackground__c</fullName>
    <description>The reason behind the research and the motivation for the selected topic.</description>
    <inlineHelpText>The reason behind the research and the motivation for the selected topic.</inlineHelpText>
    <label>Study Background and Rationale</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>