force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__StudyRegisteredClinicalTrials__c.field-meta.xml
<CustomField>
    <fullName>OCE9__StudyRegisteredClinicalTrials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will this study be registered on clinicaltrials.gov</description>
    <inlineHelpText>Will this study be registered on clinicaltrials.gov</inlineHelpText>
    <label>Study Registered on clinicaltrials.gov</label>
    <type>Checkbox</type>
</CustomField>