force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__TherapeuticAreas__c.field-meta.xml
<CustomField>
    <fullName>OCE9__TherapeuticAreas__c</fullName>
    <description>Therapeutic Area(s) of the grant(s) to be reviewed during the review committee meeting</description>
    <inlineHelpText>Therapeutic Area(s) of the grant(s) to be reviewed during the review committee meeting</inlineHelpText>
    <label>Therapeutic Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__TherapeuticAreas</valueSetName>
    </valueSet>
</CustomField>