force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__ThirdPartyProductsCompanies__c.field-meta.xml
<CustomField>
    <fullName>OCE9__ThirdPartyProductsCompanies__c</fullName>
    <description>If any third-party products will be used to conduct this study, list their name and the company that manufactures them</description>
    <inlineHelpText>If any third-party products will be used to conduct this study, list their name and the company that manufactures them</inlineHelpText>
    <label>Third-Party Products And Companies</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>