force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__TrialDesign__c.field-meta.xml
<CustomField>
    <fullName>OCE9__TrialDesign__c</fullName>
    <description>The parameters for how the study will be conducted</description>
    <inlineHelpText>The parameters for how the study will be conducted</inlineHelpText>
    <label>Trial Design</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Randomized</fullName>
            </value>
            <value>
                <fullName>Non-Randomized</fullName>
            </value>
            <value>
                <fullName>Retrospective</fullName>
            </value>
            <value>
                <fullName>Prospective</fullName>
            </value>
            <value>
                <fullName>Registry</fullName>
            </value>
            <value>
                <fullName>Open-Label</fullName>
            </value>
            <value>
                <fullName>Placebo-Controlled</fullName>
            </value>
            <value>
                <fullName>Comparator-Controlled</fullName>
            </value>
            <value>
                <fullName>Single-blind</fullName>
            </value>
            <value>
                <fullName>Double-blind</fullName>
            </value>
            <value>
                <fullName>Parallel</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>