force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__TypeOfAssistanceRequested__c.field-meta.xml
<CustomField>
    <fullName>OCE9__TypeOfAssistanceRequested__c</fullName>
    <description>What type of assistance are you requesting for enrolling patients in this study</description>
    <inlineHelpText>What type of assistance are you requesting for enrolling patients in this study</inlineHelpText>
    <label>Type of Assistance Requested</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>