force-app/main/default/objects/OCE__Meeting__c/fields/OCE9__TypeOfSupportRequested__c.field-meta.xml
<CustomField>
    <fullName>OCE9__TypeOfSupportRequested__c</fullName>
    <description>What type of support are you requesting for preparing the manuscript for this study</description>
    <inlineHelpText>What type of support are you requesting for preparing the manuscript for this study</inlineHelpText>
    <label>Type of Support Requested</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>