force-app/main/default/objects/OCE__Meeting__c/fields/OCE__AcknowledgmentOfRefundReceipt__c.field-meta.xml
<CustomField>
    <fullName>OCE__AcknowledgmentOfRefundReceipt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables users to mark if the funding organization has received a refund</description>
    <inlineHelpText>Enables users to mark if the funding organization has received a refund</inlineHelpText>
    <label>Acknowledgment of Refund Receipt</label>
    <type>Checkbox</type>
</CustomField>