force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ActualAmountUsed__c.field-meta.xml
<CustomField>
    <fullName>OCE__ActualAmountUsed__c</fullName>
    <description>Used to define the actual amount spent for the meeting to allow comparison between Requested Amount and Actual one</description>
    <inlineHelpText>Used to define the actual amount spent for the meeting to allow comparison between Requested Amount and Actual one</inlineHelpText>
    <label>Actual Amount Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>